# ollama-test

./: .env.example  .gitignore  README.md  main.py  package-lock.json  pyproject.toml  test_mcp_server.py  test_model.py  test_vision.py
docs/: references.md  test-mcp-server.md
mcp_client/: __init__.py  base_client.py  filesystem.py  git.py  readme.md
